--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 17)
 
 # Select the test project to build
-set(selected_test_project starter_example)
+set(selected_test_project mqtts)
 
 # For Linux builds, you may enable address sanitizer
 set(SMOOTH_ENABLE_ASAN 0)
@@ -32,6 +32,7 @@ list(APPEND available_tests
         access_point
         logging
         mqtt
+        mqtts
         publish
         task_event_queue
         timer
